--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="shortcut icon" href="">
 </head>
 
 <body>
